# Task-Manager

./: .gitignore
backend/: config.py  pyproject.toml  run.py
backend/app/: __init__.py
backend/app/logs/: task_update_data.txt
backend/app/models/: config_model.py  group_model.py  task_model.py  user_model.py
backend/app/routes/: auth_routes.py  conf_routes.py  group_routes.py  task_routes.py  user_routes.py
backend/app/services/: database.py
backend/app/utils/: auth.py
frontend/: package-lock.json  package.json
frontend/src/: App.js  Global.tsx  index.js
frontend/src/Components/AddSprintModal/: AddSprintModal.tsx  style.tsx
frontend/src/Components/AddTaskModal/: AddTaskModal.tsx  styles.tsx
frontend/src/Components/DndWrapper/: DndWrapper.tsx
frontend/src/Components/DropContainer/: DropContainer.tsx
frontend/src/Components/EditTask/: EditTaskModal.tsx  styles.tsx
frontend/src/Components/Header/: Header.tsx  style.tsx
frontend/src/Components/KanbanContainer/: Container.tsx  style.tsx
frontend/src/Components/Loading/: Loading.tsx  style.tsx
frontend/src/Components/LogoutButton/: LogoutButton.tsx
frontend/src/Components/Register/: Register.tsx  style.tsx
frontend/src/Components/SprintCard/: SprintCard.tsx  style.tsx
frontend/src/Components/TaskCard/: TaskCard.tsx  styles.tsx
frontend/src/Components/TaskTable/: TaskTable.tsx  styles.tsx
frontend/src/Context/: AuthContext.tsx  ProtectedRoutes.tsx
frontend/src/Pages/Config/: Config.tsx
frontend/src/Pages/Home/: Home.tsx
frontend/src/Pages/Kanban/: Kanban.tsx
(+6 files in other folders)
